@@ -1,20 +1,18 @@
 package com.garganttua.api.core.filter;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
+import java.util.regex.Pattern;
 
 import com.fasterxml.jackson.annotation.JsonInclude;
 import com.fasterxml.jackson.annotation.JsonInclude.Include;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 
-import lombok.AllArgsConstructor;
 import lombok.Getter;
-import lombok.NoArgsConstructor;
 
 @Getter
-@NoArgsConstructor
-@AllArgsConstructor
 public class GGAPILiteral {
 	
 	private static ObjectMapper mapper = new ObjectMapper();
@@ -31,6 +29,7 @@ public class GGAPILiteral {
 	public static final String OPERATOR_LOWER_THAN_EXCLUSIVE = OPERATOR_PREFIX + "lte";
 	public static final String OPERATOR_REGEX = OPERATOR_PREFIX + "regex";
 	public static final String OPERATOR_EMPTY = OPERATOR_PREFIX + "empty";
+	public static final String OPERATOR_TEXT = OPERATOR_PREFIX + "text";
 	
 	public static final String OPERATOR_IN = OPERATOR_PREFIX + "in";
 	public static final String OPERATOR_NOT_IN = OPERATOR_PREFIX + "nin";
@@ -38,7 +37,6 @@ public class GGAPILiteral {
 	public static final String OPERATOR_AND = OPERATOR_PREFIX + "and";
 	public static final String OPERATOR_OR = OPERATOR_PREFIX + "or";
 	public static final String OPERATOR_NOR = OPERATOR_PREFIX + "nor";
-	public static final String OPERATOR_TEXT = OPERATOR_PREFIX + "text";
 
 	private static List<String> finalOperators = new ArrayList<String>();
 	
@@ -55,7 +53,7 @@ public class GGAPILiteral {
 		finalOperators.add(OPERATOR_NOT_IN);
 	}
 	
-	@JsonInclude
+	@JsonInclude(Include.NON_NULL)
 	private String name;
 
 	@JsonInclude(Include.NON_NULL)
@@ -63,6 +61,16 @@ public class GGAPILiteral {
 
 	@JsonInclude(Include.NON_NULL)
 	private List<GGAPILiteral> literals;
+	
+	private GGAPILiteral() {
+		
+	}
+
+	private GGAPILiteral(String operator, Object value, List<GGAPILiteral> subs) {
+		this.name = operator;
+		this.value = value;
+		this.literals = subs;
+	}
 
 	public static void validate(GGAPILiteral literal) throws GGAPILiteralException {
 		if( literal == null ) {
@@ -177,28 +185,9 @@ public class GGAPILiteral {
 	public static boolean isFinal(GGAPILiteral literal) {
 		return finalOperators.contains(literal.getName());
 	}
-
-	static public GGAPILiteral getFilterForTestingFieldEquality(String fieldName, String fieldvalue) {
-		GGAPILiteral equalsToRequestedTenantId = new GGAPILiteral(GGAPILiteral.OPERATOR_EQUAL, fieldvalue, null);
-		List<GGAPILiteral> fieldTenantIdLiterals = new ArrayList<GGAPILiteral>();
-		fieldTenantIdLiterals.add(equalsToRequestedTenantId);
-		
-		GGAPILiteral fieldTenantId = new GGAPILiteral(GGAPILiteral.OPERATOR_FIELD, fieldName, fieldTenantIdLiterals);
-		return fieldTenantId;
-	}
-	
-	public static GGAPILiteral getFilterForTestingFieldEquality(String fieldName, boolean fieldvalue) {
-		GGAPILiteral equalsToRequestedTenantId = new GGAPILiteral(GGAPILiteral.OPERATOR_EQUAL, fieldvalue, null);
-		List<GGAPILiteral> fieldTenantIdLiterals = new ArrayList<GGAPILiteral>();
-		fieldTenantIdLiterals.add(equalsToRequestedTenantId);
-		
-		GGAPILiteral fieldTenantId = new GGAPILiteral(GGAPILiteral.OPERATOR_FIELD, fieldName, fieldTenantIdLiterals);
-		return fieldTenantId;
-	}
 	
 	@Override
 	public String toString() {
-		
 		try {
 			return mapper.writeValueAsString(this);
 		} catch (JsonProcessingException e) {
@@ -208,7 +197,117 @@ public class GGAPILiteral {
 	}
 
 	public static GGAPILiteral and(GGAPILiteral ...filters) {
-		return new GGAPILiteral(GGAPILiteral.OPERATOR_AND, null, List.of(filters));
+		return new GGAPILiteral(GGAPILiteral.OPERATOR_AND, null, new ArrayList<GGAPILiteral>(Arrays.asList(filters)));
+	}
+
+	public static GGAPILiteral eq(String fieldName, Object value) {
+		return operator(GGAPILiteral.OPERATOR_EQUAL, fieldName, value);
+	}
+
+	private static GGAPILiteral operator(String operator, String fieldName, Object value) {
+		GGAPILiteral valueLiteral = new GGAPILiteral(operator, value, null);
+		List<GGAPILiteral> fieldLiterals = new ArrayList<GGAPILiteral>();
+		fieldLiterals.add(valueLiteral);
+
+		return new GGAPILiteral(GGAPILiteral.OPERATOR_FIELD, fieldName, fieldLiterals);
+	}
+
+	public static GGAPILiteral ne(String fieldName, Object value) {
+		return operator(GGAPILiteral.OPERATOR_NOT_EQUAL, fieldName, value);
+	}
+
+	public static GGAPILiteral gt(String fieldName, Object value) {
+		return operator(GGAPILiteral.OPERATOR_GREATER_THAN, fieldName, value);
+	}
+	
+	public static GGAPILiteral gte(String fieldName, Object value) {
+		return operator(GGAPILiteral.OPERATOR_GREATER_THAN_EXCLUSIVE, fieldName, value);
+	}
+	
+	public static GGAPILiteral lt(String fieldName, Object value) {
+		return operator(GGAPILiteral.OPERATOR_LOWER_THAN, fieldName, value);
+	}
+	
+	public static GGAPILiteral lte(String fieldName, Object value) {
+		return operator(GGAPILiteral.OPERATOR_LOWER_THAN_EXCLUSIVE, fieldName, value);
+	}
+
+	public static GGAPILiteral empty(String fieldName) {
+		return operator(GGAPILiteral.OPERATOR_EMPTY, fieldName, null);
+	}
+
+	public static GGAPILiteral regex(String fieldName, String regex) {
+		Pattern pattern = Pattern.compile(regex);
+		return operator(GGAPILiteral.OPERATOR_REGEX, fieldName, regex);
+	}
+
+	public static GGAPILiteral in(String fieldName, Object ...values) {	
+		return operatorWithManyValues(GGAPILiteral.OPERATOR_IN, fieldName, values);
+	}
+
+	private static GGAPILiteral operatorWithManyValues(String operator, String fieldName, Object... values) {
+		GGAPILiteral literal = operator(operator, fieldName, null);
+		ArrayList<GGAPILiteral> valuesLiterals = new ArrayList<GGAPILiteral>();
+		for(Object value: values) {
+			valuesLiterals.add(new GGAPILiteral(null, value, null));
+		}
+		literal.literals.get(0).literals = valuesLiterals;
+		return literal;
+	}
+
+	public static GGAPILiteral nin(String fieldName, Object ...values) {		
+		return operatorWithManyValues(GGAPILiteral.OPERATOR_NOT_IN, fieldName, values);
+	}
+
+	public static GGAPILiteral text(String fieldName, String value) {
+		return operator(GGAPILiteral.OPERATOR_TEXT, fieldName, value);
+	}
+
+	public static GGAPILiteral or(GGAPILiteral ...filters) {
+		return new GGAPILiteral(GGAPILiteral.OPERATOR_OR, null, new ArrayList<GGAPILiteral>(Arrays.asList(filters)));
+	}
+	
+	public static GGAPILiteral nor(GGAPILiteral ...filters) {
+		return new GGAPILiteral(GGAPILiteral.OPERATOR_NOR, null, new ArrayList<GGAPILiteral>(Arrays.asList(filters)));
+	}
+
+	public GGAPILiteral andOperator(GGAPILiteral ...filters) {
+		if( this.name.equals(GGAPILiteral.OPERATOR_AND)) {
+			List<GGAPILiteral> filterList = new ArrayList<GGAPILiteral>(Arrays.asList(filters));
+			this.literals.addAll(filterList); 
+			return this;
+		} else {
+			List<GGAPILiteral> filterList = new ArrayList<GGAPILiteral>(Arrays.asList(filters));
+			filterList.add(this);	
+			GGAPILiteral[] arr = new GGAPILiteral[filterList.size()];
+			return GGAPILiteral.and(filterList.toArray(arr));
+		}
+	}
+	
+	public GGAPILiteral orOperator(GGAPILiteral ...filters) {
+		if( this.name.equals(GGAPILiteral.OPERATOR_OR)) {
+			List<GGAPILiteral> filterList = new ArrayList<GGAPILiteral>(Arrays.asList(filters));
+			this.literals.addAll(filterList); 
+			return this;
+		} else {
+			List<GGAPILiteral> filterList = new ArrayList<GGAPILiteral>(Arrays.asList(filters));
+			filterList.add(this);	
+			GGAPILiteral[] arr = new GGAPILiteral[filterList.size()];
+			return GGAPILiteral.or(filterList.toArray(arr));
+		}
+	}
+	
+	public GGAPILiteral norOperator(GGAPILiteral ...filters) {
+		if( this.name.equals(GGAPILiteral.OPERATOR_NOR)) {
+			List<GGAPILiteral> filterList = new ArrayList<GGAPILiteral>(Arrays.asList(filters));
+			this.literals.addAll(filterList); 
+			return this;
+		} else {
+			List<GGAPILiteral> filterList = new ArrayList<GGAPILiteral>(Arrays.asList(filters));
+			filterList.add(this);	
+			GGAPILiteral[] arr = new GGAPILiteral[filterList.size()];
+			return GGAPILiteral.nor(filterList.toArray(arr));
+		}
 	}
 
 
